[gd_scene load_steps=14 format=3 uid="uid://bpywhpfbqbmpq"]

[ext_resource type="Script" path="res://addons/android_game_tool/scene/privacy.gd" id="1_n24wu"]
[ext_resource type="Texture2D" uid="uid://2qgssswbp2i4" path="res://addons/android_game_tool/resource/log_img_shiling.png" id="3_gupgy"]
[ext_resource type="Texture2D" uid="uid://bo17oppmgc88s" path="res://addons/android_game_tool/scene/Check.png" id="3_u34vp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jht7p"]
bg_color = Color(0.0976563, 0.0976563, 0.0976563, 0.490196)

[sub_resource type="LabelSettings" id="LabelSettings_1tpat"]
font_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_mgfwm"]

[sub_resource type="LabelSettings" id="LabelSettings_2xt81"]

[sub_resource type="LabelSettings" id="LabelSettings_g5qif"]

[sub_resource type="LabelSettings" id="LabelSettings_7g4sh"]

[sub_resource type="LabelSettings" id="LabelSettings_yh777"]

[sub_resource type="LabelSettings" id="LabelSettings_gwh7m"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ojfa6"]
atlas = ExtResource("3_u34vp")
region = Rect2(52.3424, -0.713619, 50.5596, 50.8223)

[sub_resource type="AtlasTexture" id="AtlasTexture_32r84"]
atlas = ExtResource("3_u34vp")
region = Rect2(-0.3759, -0.582596, 51.0863, 50.0329)

[node name="Privacy" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_n24wu")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.638
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 126.576
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_jht7p")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "抵制不良游戏，拒绝盗版游戏 。注意自我保护，谨防受骗上当。
适度游戏益脑，沉迷游戏伤身。合理安排时间，享受健康生活。
根据国家未成年防沉迷规定，所有用户必须用本人身份信息进行实名登记
未成年人将纳入防沉迷限制，本网络游戏适合12周岁以上的用户使用
为了您的健康，请合理控制游戏时间
"
label_settings = SubResource("LabelSettings_1tpat")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="LogImgShiling" type="TextureRect" parent="Panel"]
z_index = 1
offset_left = 26.0
offset_top = 11.0
offset_right = 84.0
offset_bottom = 77.0
texture = ExtResource("3_gupgy")
expand_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 172.0
offset_bottom = -94.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "我已仔细阅读并同意"
label_settings = SubResource("LabelSettings_mgfwm")

[node name="Label2" type="Label" parent="HBoxContainer"]
modulate = Color(1, 0.984314, 0, 1)
layout_mode = 2
theme_override_colors/font_color = Color(0.894118, 0.881033, 0.0794993, 1)
theme_override_font_sizes/font_size = 40
text = "用户协议"
label_settings = SubResource("LabelSettings_2xt81")

[node name="TextureButton" type="TextureButton" parent="HBoxContainer/Label2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="HBoxContainer/Label2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_top = 13.0
offset_right = 5.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.894118, 0.882353, 0.0784314, 1)
theme_override_font_sizes/font_size = 24
text = "- - - - - -"
label_settings = SubResource("LabelSettings_g5qif")

[node name="Label3" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "和"
label_settings = SubResource("LabelSettings_7g4sh")

[node name="Label4" type="Label" parent="HBoxContainer"]
modulate = Color(1, 0.985139, 0, 1)
layout_mode = 2
theme_override_colors/font_color = Color(0.894118, 0.882353, 0.0784314, 1)
theme_override_font_sizes/font_size = 40
text = "隐私政策"
label_settings = SubResource("LabelSettings_yh777")

[node name="TextureButton" type="TextureButton" parent="HBoxContainer/Label4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="HBoxContainer/Label4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_top = 13.0
offset_right = 5.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.894118, 0.882353, 0.0784314, 1)
theme_override_font_sizes/font_size = 24
text = "- - - - - -"
label_settings = SubResource("LabelSettings_gwh7m")

[node name="CheckBox" type="CheckBox" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -174.0
offset_top = -134.0
offset_right = -115.0
offset_bottom = -75.9999
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.385, 0.385)
theme_override_icons/checked = SubResource("AtlasTexture_ojfa6")
theme_override_icons/unchecked = SubResource("AtlasTexture_32r84")

[node name="DetailsPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TextureButton" type="TextureButton" parent="DetailsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="DetailsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 70
theme_override_constants/margin_top = 70
theme_override_constants/margin_right = 70
theme_override_constants/margin_bottom = 155

[node name="TextEdit" type="TextEdit" parent="DetailsPanel/MarginContainer"]
visible = false
layout_mode = 2
text = "用户协议
{0}·用户协议
为使用{0}APP的服务，您应当阅读并遵守《{0}·服务协议》（以下简称“本协议”）。请您务必审慎阅读、充分理解各条款内容，特别是免除或者限制责任的条款、管辖与适用法律条款，以及开通或使用某项服务的单独协议。限制、免责条款或其他涉及您重大权益的条款可能以加粗、加下划线等形式提示您重点注意。
除非您已充分阅读、完全理解并接受本协议所有条款，否则您无权使用 {0} 服务。您使用 {0} 服务，或者以其他任何明示或默示方式表示接受本协议的，均视为您已阅读并同意签署本协议。本协议即在您与 {0} 之间产生法律效力，成为对双方均具有约束力的法律文件。
如果您未满18周岁，请在法定监护人的陪同下阅读本协议，并特别注意未成年人使用条款。
一、协议的范围
1.1 本协议是您（即“用户”）与 {0} 之间关于使用 {0} 相关服务所订立的协议。“用户”是指使用 {0} 相关服务的使用人，在本协议中更多地称为“您”。
1.2 本协议项下的服务是指 {0} 现在正在提供和将来可能向您提供的游戏相关服务和其他网络服务（以下简称“本服务”）。
1.3 本协议内容同时包括《隐私政策》，亦包括您在使用 {0} 某一特定服务时，该服务可能会另有的单独协议、相关业务规则、社区管理规范等（以下统称为“单独协议”）。上述内容一经正式发布，即为本协议不可分割的组成部分，您同样应当仔细阅读并遵守。您使用前述任何单独协议涉及的服务，即视为您同意接受该协议及本协议的约束。
二、 {0} 账号
2.1 您可以创建 {0} 帐号，以便您更好地使用 {0} 提供的服务。另外，某些服务需要您拥有 {0} 账号才能使用。您应对自己使用 {0} 帐号所执行的操作负责，包括采取合理的措施来保障帐号的安全。
2.2 若您在 {0} 账号注册过程中提供的信息不准确，不真实，含有违法或不良信息的， {0} 有权不予注册，并保留终止您使用 {0} 各项服务的权利。若您以虚假信息骗取账号注册或账号头像、个人简介等注册资料存在违法和不良信息的， {0} 有权视情形采取通知限期改正、暂停使用、注销账号等措施。对于冒用他人身份包括关联机构或社会名人注册账号的， {0} 有权注销该账号，并向政府主管部门进行报告。
2.3 您进行实名认证时，应提供有关您本人真实、合法、准确、有效的身份信息及其他相关信息，且不得以他人身份资料进行实名认证。否则 {0} 有权终止为您提供服务，并有权对您的账号采取包括但不限于警告、限制或禁止使用账号全部或部分功能、删除账号及数据、删除相关信息的处理措施，由此造成的一切后果由您自行承担。
2.4 若您不进行实名认证，或您提供的认证信息不完整的，则您可能无法使用 {0} 部分服务或在使用 {0} 的过程中会受到相应限制。
2.5 您理解并同意，依据政策法规的要求，及时提供真实准确的账号注册资料。 {0} 提醒您，为了保障您的账号安全，您可能无法修改注册时提供的初始注册信息及身份信息，请您慎重填写相关信息。
2.6 您理解并同意，除相关权利人依照法律规定应享有的权利外，您使用 {0} 账号产生的相关数据和记录，包括但不限于 {0} 账号、登录、活动、消费记录和相关的统计数据等归 {0} 所有。发生争议时，您同意以 {0} 提供的数据为准。
2.7 尽管有前述约定，对于第三方提供的单项服务产生的数据，包括但不限于单项服务登录、活动、消费记录及其他产品日志、产品客户服务记录归第三方所有。发生争议时，您同意以第三方提供的数据为准。
2.8 {0} 特别提醒您应妥善保管您的 {0} 账号。当您使用完毕后，应安全退出。因您保管不善可能导致遭受盗号的，责任由您自行承担。
2.9 如果您使用第三方账号（如微信，QQ，谷歌等）登录并使用 {0} 提供的服务，您可能还需要遵守第三方账号相关的协议或附加条款，并且第三方账号的运营方可能有权停用您的账号。
2.10 您应当理解，您应合理保管您的 {0} 账号，不应向他人透露或分享您的 {0} 账号。如果您的 {0} 账号在一定时限内激活设备数达到五台以上，您可能会因账号异常而无法在新的设备中继续激活已购买的付费游戏，但不影响您继续体验 {0} 提供的其他服务。
2.11 如果您代表某组织（如公司、非营利组织及其他非个人组织）使用 {0} 的服务，您应取得该组织的授权证明，同时该组织的授权代表也需要同意本协议。对 {0} 或第三方造成损失的，该组织应当依法承担赔偿责任。
2.12 若您发现有他人冒用或盗用您的账号、或任何其他未经您合法授权使用的情形时，应立即以 {0} 披露的方式通知 {0} 并告知 {0} 需采取的措施。您通知 {0} 时，应提供与您注册身份信息相一致的个人有效身份信息， {0} 收到您的有效请求并核实身份后，会根据您的要求或结合具体情况采取相应措施（包括但不限于暂停该账号的登录和使用等）， {0} 因根据您的请求采取相应措施而造成您及其他用户损失的，由您自行承担。若您没有提供有效身份信息或您提供的个人有效身份信息与所注册的身份信息不一致的， {0} 有权拒绝您的请求，因此造成您损失的，由您自行承担。
2.13 您理解并同意，您所设置的账号不得违反国家法律法规及 {0} 的相关规则，不得实施任何侵害国家利益、损害其他公民合法权益，有害社会道德风尚的行为，您的账号名称、头像和简介等注册信息及其他个人信息中不得出现违法和不良信息，未经他人许可不得用他人名义（包括但不限于冒用他人姓名、名称、字号、头像等足以让人引起混淆的方式）开设账号，不得恶意注册 {0} 账号（包括但不限于频繁注册、批量注册账号等行为）。
三、个人信息保护
3.1 保护您的个人信息是 {0} 的一项基本原则。 {0} 将按照本协议及《隐私政策》的规定收集、使用、储存和分享您的个人信息。本协议对个人信息保护规定的内容与上述《隐私政策》有相冲突的，及本协议对个人信息保护相关内容未作明确规定的，均以《隐私政策》的内容为准。
3.2 {0} 将运用各种安全技术和程序建立完善的管理制度来保护您的个人信息，以免遭受未经授权的访问、使用或披露。
3.3 我们可能基于以下法律原因披露您的个人信息：
　（1）遵守适用的法律法规等有关规定；
　（2）遵守法院判决、裁定或其他法律程序的规定；
　（3）遵守相关政府机关或其他法定授权组织的要求；
　（4）我们有理由确信需要遵守法律法规等有关规定；
　（5）为执行相关服务协议或隐私政策、维护社会公共利益，为保护我们的客户、我们或我们的关联公司、其他用户或雇员的人身财产安全或其他合法权益合理且必要的用途。
四、 {0} 提供的服务
4.1 您理解并同意， {0} 的服务是按照现有技术和条件所能达到的现状提供的。 {0} 会尽最大努力向您提供服务，确保服务的连贯性和安全性；但 {0} 不能随时预见和防范法律、技术以及其他风险，包括但不限于不可抗力、病毒、木马、黑客攻击、系统不稳定、第三方服务瑕疵、政府行为等原因可能导致的服务中断、数据丢失以及其他的损失和风险。
4.2 您应当理解，您使用 {0} 的服务需自行准备与相关服务有关的终端设备（如电脑、手机、其他移动终端等），并承担所需的费用（如话费、宽带费等费用）。
4.3 您应当理解，如果您选择在移动设备上使用 {0} 提供的服务，请勿因此分散注意力或违反交通安全的相关法律法规。
4.4 您同意并理解， {0} 可能在提供服务的过程中自行或由第三方合作伙伴向您发送广告、推广或宣传信息（包括商业与非商业信息）。
4.5 {0} 可能为您提供选择关闭单次广告信息的选项，但任何时候您都不得以本协议未明确约定或 {0} 未书面许可的方式屏蔽、过滤广告信息。
4.6 {0} 依照法律的规定履行相关广告及推广义务，您应当自行判断广告信息的真实性并为自己的判断行为负责，除法律明确规定外，您因依该广告信息进行的交易或前述广告商提供的内容而遭受的损失或损害， {0} 不承担责任。
4.7 {0} 的部分服务是以收费方式提供的，如您使用收费服务，请遵守相关的协议或约定。若您未按时足额付费， {0} 有权中断、中止或终止提供相应服务。
4.8 {0} 可能根据实际需要对收费服务的收费标准、方式进行修改和变更， {0} 也可能会对部分免费服务开始收费。前述修改、变更或开始收费前， {0} 将在相应服务页面进行通知或公告。如果您不接受上述修改、变更或付费内容，则应停止使用该服务。
4.9 {0} 可能会对服务内容进行升级优化或变更，也可能会中断、中止或终止服务。
4.10 您理解并同意， {0} 有权自主决定经营策略。在 {0} 发生合并、分立、收购、资产转让时， {0} 可向第三方转让本服务下相关资产； {0} 也可在单方通知您后，将本协议下部分或全部服务转交由第三方运营或履行。具体受让主体以 {0} 通知的为准。
4.11 如发生下列任何一种情形， {0} 有权不经通知而中断或终止向您提供的服务：
　（1）根据法律规定您应提交真实信息，而您提供的个人资料不真实、或与注册时信息不一致又未能提供合理证明；
　（2）您违反相关法律法规或本协议的约定；
　（3）按照法律规定或主管部门的要求；
　（4）出于安全的原因或其他必要的情形。
4.12 如果 {0} 按本协议约定向您提供了付费游戏服务，您有权在购买某款付费游戏之日起5个自然日内，发起该款付费游戏的退款申请并应备注真实的退款原因。5个自然日的计算方式为自您实际支付完成时间开始计算，满120个小时为止。发起退款流程前，您应及时删除对应的付费游戏。
4.13 为保障用户权益及预防交易风险（如转卖失效游戏兑换码），您通过购买或其他任何方式取得的游戏兑换码均无法申请退款。
4.14 您有责任自行备份存储因本服务产生的数据。如果您的服务被终止， {0} 可以从服务器上永久地删除您的数据，但法律法规另有规定的除外。服务终止后， {0} 没有义务向您返还数据。
五、基于软件提供的服务
{0} 的部分服务包含可下载的软件。若您需要使用该软件提供的服务，您还应遵守以下约定：
5.1 您在使用本服务的过程中可能需要下载软件，对于这些软件， {0} 给予您一项个人的、不可转让及非排他性的许可。您仅可为访问或使用本服务的目的而使用这些软件。
5.2 为了改善您的体验、保证服务的安全性及产品功能的一致性， {0} 可能会对软件进行更新。建议您将相关软件更新到最新版本，否则 {0} 并不保证其能正常使用。
5.3 {0} 可能为不同的终端设备开发不同的软件版本，您应当根据实际情况选择下载合适的版本进行安装。您可以直接从 {0} 的网站上获取软件，也可以从得到 {0} 授权的第三方获取。如果您从未经 {0} 授权的第三方处获取软件或与软件名称相同的安装程序， {0} 无法保证该软件能够正常使用，并对因此给您造成的损失不予负责。
5.4 除非 {0} 书面许可，您不得从事下列任一行为：
　（1）删除软件及其副本上关于著作权的信息；
　（2）对软件进行反向工程、反向汇编、反向编译，或者以其他方式尝试发现软件的源代码；
　（3）对 {0} 拥有知识产权的内容进行使用、出租、出借、复制、修改、链接、转载、汇编、发表、出版、建立镜像站点等；
　（4）对软件或者软件运行过程中释放到任何终端内存中的数据、软件运行过程中客户端与服务器端的交互数据，以及软件运行所必需的系统数据，进行复制、修改、增加、删除、挂接运行或创作任何衍生作品，形式包括但不限于使用插件、外挂或非经 {0} 授权的第三方工具/服务接入软件和相关系统；
　（5）通过修改或伪造软件运行中的指令、数据，增加、删减、变动软件的功能或运行效果，或者将用于上述用途的软件、方法进行运营或向公众传播，无论这些行为是否为商业目的；
　（6）通过非 {0} 开发、授权的第三方软件、插件、外挂、系统，登录或使用 {0} 软件及服务，或制作、发布、传播非 {0} 开发、授权的第三方软件、插件、外挂、系统。
六、关于单项服务
6.1 为保证向您提供更加全面优质的服务， {0} 可能为您提供其他单项服务，包括但不限于直播、视频等产品和/或服务内容，您有权根据需要，自主决定是否使用该单项服务。
6.2 本条所述单项服务可能会另有单独协议， 除非您已充分阅读、完全理解并接受单独协议的所有条款，否则您无权使用 {0} 提供的特定单项服务。
6.3 {0} 的部分服务允许您访问其他个人或组织的内容，除非法律允许，否则未经其他个人或组织的许可，您不得使用此类内容。其他个人或组织在其内容中表达的观点仅代表其个人或组织的观点，并不代表 {0} 的观点。
6.4 您在 {0} 平台上使用第三方提供的产品或服务时，除遵守本协议约定外，还应遵守第三方的用户协议。 {0} 和第三方对可能出现的纠纷在法律规定和约定的范围内各自承担责任。
七、您的权利义务
7.1 除非您与 {0} 另有约定，您同意本服务仅为您个人非商业性质的使用。
7.2 您应当通过 {0} 提供或认可的方式使用本服务。您依本协议条款所取得的权利不可转让。
7.3 您不得使用未经 {0} 授权的插件、外挂或第三方工具对本协议项下的服务进行干扰、破坏、修改或施加其他影响。
7.4 您不得利用或针对 {0} 相关服务进行任何危害计算机网络安全的行为，包括但不限于：
　（1）非法侵入他人网络、干扰他人网络正常功能、窃取网络数据等危害网络安全的活动；
　（2）提供专门用于从事侵入网络、干扰网络正常功能及防护措施、窃取网络数据等危害网络安全活动的程序、工具；
　（3）明知他人从事危害网络安全的活动的，为其提供技术支持、广告推广、支付结算等帮助；
　（4）使用未经许可的数据或进入未经许可的服务器/账号；
　（5）未经允许进入公众计算机网络或者他人计算机系统并删除、修改、增加存储信息；
　（6）未经许可，企图探查、扫描、测试 {0} 系统或网络的弱点或其它实施破坏网络安全的行为；
　（7）企图干涉、破坏 {0} 系统或网站的正常运行，故意传播恶意程序或病毒以及其他破坏干扰正常网络信息服务的行为；
　（8）伪造TCP/IP数据包名称或部分名称；
　（9）对 {0} 及相关服务进行反向工程、反向汇编、编译或者以其他方式尝试发现 {0} 系统或网站的源代码；
　（10）恶意注册 {0} 及相关服务的账号，包括但不限于频繁、批量注册账号；
　（11）违反法律法规、本协议、公司的相关规则及侵犯他人合法权益的其他行为。
7.5 如果 {0} 有理由认为您的行为违反或可能违反上述约定的， {0} 可独立进行判断并处理，且有权在不事先通知您的情况下暂停或终止向您提供服务，并追究相关法律责任。
7.6 您在使用 {0} 服务时承诺遵守法律法规、社会主义制度、国家利益、公民合法权益、公共秩序、社会道德风尚和信息真实性等七条底线，不得利用本服务从事违法违规行为，包括但不限于：
　（1）不得在 {0} 账号注册资料中出现违反宪法或法律法规规定和不良信息；
　（2）发布、传送、传播、储存泄露国家秘密，颠覆国家政权，危害国家安全统一、主权和领土完整，损害国家荣誉和利益，煽动民族仇恨、民族歧视，破坏民族团结，破坏国家宗教政策，宣扬邪教和封建迷信，破坏社会稳定，违反公序良俗，侮辱、诽谤、淫秽、暴力、凶杀、恐怖或者教唆犯罪以及任何违反国家法律法规的内容；
　（3）发布、传送、传播、储存侵害他人隐私权、名誉权、肖像权、知识产权、商业秘密等合法权利、干扰产品正常运营的内容；
　（4）恶意虚构事实、隐瞒真相以误导、欺骗他人，对他人进行暴力恐吓、威胁，实施人肉搜索或冒充、利用他人名义；
　（5）发布、传送、传播虚假信息、广告信息、过度营销信息及垃圾信息；
　（6）利用账号或软件及服务从事任何违法犯罪活动；
　（7）本协议约定的其他禁止行为；
　（8）其他法律法规禁止的行为。
7.7 如果您违反了本条约定，相关国家机关或机构可能会对您提起诉讼、罚款或采取其他制裁措施，并要求 {0} 给予协助。造成损害的，您应依法予以赔偿， {0} 不承担任何责任。
7.8 如果 {0} 发现或收到他人举报您发布的信息违反本条约定， {0} 有权进行独立判断并采取技术手段予以删除、屏蔽或断开链接。同时， {0} 有权视您的行为性质，采取包括但不限于暂停或终止服务，限制、冻结或终止 {0} 账号使用，追究法律责任等措施。
7.9 您违反本条约定，导致任何第三方损害的，您应当独立承担责任； {0} 因此遭受损失的，您也应当一并赔偿（包括但不限于财产损害赔偿、名誉损害赔偿及诉讼费、律师费、公证费、交通费等因维权而产生的合理费用）。
7.10 您在使用本服务过程中应当遵守当地适用的法律法规，并尊重当地的道德和风俗习惯。如果您的行为违反了适用的法律法规或道德风俗，您应当为此独立承担责任。
7.11 您应避免因使用本服务而使 {0} 卷入政治和公共事件，否则 {0} 有权暂停或终止对您的服务。
7.12 您通过本服务发送或传播的内容（包括但不限于网页、文字、图片、音频、视频、图表等）均由您自行承担责任。
7.13 您发送或传播的内容应有合法来源，相关内容为您所有或您已获得权利人的授权。
7.14 如果 {0} 收到权利人通知，主张您发送或传播的内容侵犯其相关权利的，您同意 {0} 有权进行独立判断并采取删除、屏蔽或断开链接等措施。
7.15 您使用本服务时不得违反国家法律法规、侵害他人合法权益。您理解并同意，如您被他人投诉侵权或您投诉他人侵权， {0} 有权将争议中相关方的主体、联系方式、投诉相关内容等必要信息提供给其他争议方或相关部门，以便及时解决投诉纠纷，保护权利人合法权益。
八、未成年人使用条款
8.1 对于未成年人的隐私保护， {0} 将按照平台公布的《隐私政策》中阐述的方式、方法进行。若您未满18周岁，应在监护人的监护、指导下阅读本协议和使用本服务。
8.2 未成年人涉世未深，容易被网络虚象迷惑，且好奇心强，遇事缺乏随机应变的处理能力，很容易被别有用心的人利用而又缺乏自我保护能力。因此，未成年人在使用本服务时应注意以下事项，提高安全意识，加强自我保护：
　（1）认清网络世界与现实世界的区别，避免沉迷于网络，影响日常的学习生活；
　（2）填写个人资料时，加强个人保护意识，以免不良分子对个人生活造成骚扰；
　（3）在监护人或老师的指导下，学习正确使用网络；
　（4）避免与陌生网友随意会面，以免不法分子有机可乘，危及自身安全。
8.3 监护人、学校均应在未成年人使用本服务时多做引导。特别是家长应关心子女的成长，注意与子女的沟通，指导子女上网应该注意的安全问题，防患于未然。
九、知识产权
9.1 您在使用本服务中所产生内容的知识产权归您或相关权利人所有。除特别说明或者法律另有特别规定外， {0} 在本服务中提供的内容和信息（包括但不限于网页、文字、图片、音频、视频、图表、依据 {0} 独有的分析模型计算的产品评分等数据信息等），用于提供上述内容和信息的基础设施和平台（包括但不限于软件、网站、应用程序等），在本服务中所使用的“ {0} ”等商业标识、商业形象、标语文案等，以及本服务在开发、运营、维护过程中产生的全部数据和资料的知识产权归 {0} 所有。
9.2 您理解并同意，您在使用本服务时上传、提交、存储或发布的内容（包括但不限于文字、图片、视频、音频、动画等）均由您原创或已获合法授权。您通过 {0} 上传、提交、存储或发布的任何内容的知识产权归属您或原始著作权人所有，您的上传、提交、存储或发布行为不会侵犯他人的知识产权或其他合法权益。因您通过 {0} 上传、发布的任何内容导致侵权问题的，您将承担全部责任。
9.3 您理解并同意， {0} 有权将您上传、发布的内容用于 {0} 各种形态的产品和服务上，包括但不限于网站、软件、移动端或其他形式的产品及应用。同时您有权对该等内容进行编辑、修改、调整或删除。您在提供该等内容时授予 {0} 一项全球性的免费许可，允许 {0} 有权修改、复制、改编、翻译、再许可、汇编、制作衍生作品，出版、表演、展示该等内容。您对 {0} 的前述授权并不改变发布内容的所有权及知识产权归属，也并不影响您行使对发布内容的合法权利。
9.4 第三方若出于非商业目的，将用户在 {0} 上发表的内容转载或复制到 {0} 之外的地方，应当在作品的正文开头的显著位置注明原作者姓名（或原作者在 {0} 上使用的帐号名称），给出原始链接，注明「发表于 {0} 」，并不得对作品进行修改演绎。若需要对作品进行修改，或用于商业目的，第三方应当联系用户获得单独授权，按照用户规定的方式使用该内容。
9.5 上述及其他任何本服务包含的内容的知识产权均受到法律保护。
9.6 您确认并同意授权 {0} 有权以自己的名义或委托专业第三方针对有关您上传、提交、存储或发布的内容（含衍生作品）的侵权行为进行独立自主的维权并获得全部赔偿。维权形式包括但不限于：监测侵权行为、发送维权函、提起诉讼或仲裁、调解、和解等。 {0} 有权对维权事宜做出独立决策并予以实施。
9.7 未经 {0} 书面许可，您不得自行或授权、允许、协助任何第三方对 {0} 及相关服务中信息内容进行如下行为：
　（1）复制、读取、采用 {0} 及相关服务的信息内容，用于包括但不限于宣传、增加阅读量、浏览量等商业用途；
　（2）擅自编辑、整理、编排 {0} 及相关服务的信息内容后在 {0} 及相关服务的源页面以外的渠道进行展示；
　（3）采用包括但不限于特殊标识、特殊代码等任何形式的识别方法，自行或协助第三方对 {0} 及相关服务的信息内容产生流量及/或阅读量引导、转移、劫持等不利影响；
　（4）其他非法获取或使用 {0} 及相关服务信息内容的行为。
9.8 经 {0} 书面许可后，您对 {0} 及相关服务信息内容的分享、转发等行为，还应符合以下规范：
　（1）不得对 {0} 及相关服务的源网页进行任何形式的改动，包括但不限于 {0} 及相关服务的首页链接，广告系统链接等入口，也不得对 {0} 及相关服务的源页面的展示进行任何形式的遮挡、插入、弹窗等妨碍；
　（2）应当采取安全、有效、严密的措施，防止 {0} 及相关服务的信息内容被第三方通过包括但不限于蜘蛛程序（spider）等任何形式进行非法获取；
　（3）不得把相关数据内容用于 {0} 书面许可范围之外的目的，进行任何形式的销售和商业使用，或向第三方泄露、提供或允许第三方未经 {0} 授权而使用；
　（4）向任何第三方分享、转发、复制 {0} 及相关服务信息内容的行为，应当遵守 {0} 为此制定的其他规范和标准。
十、免责事由
10.1 您理解并同意，在使用本服务的过程中，可能会遇到不可抗力等风险因素，使本服务发生中断。不可抗力是指不能预见、不能克服并不能避免且对一方或双方造成重大影响的客观事件，包括但不限于自然灾害如洪水、地震、瘟疫流行和风暴等以及社会事件如战争、动乱、政府行为等。出现上述情况时， {0} 将努力在第一时间与相关单位配合，及时进行修复，但是由此给您造成的损失 {0} 在法律允许的范围内免责。
10.2 在法律允许的范围内， {0} 对以下情形导致的服务中断或受阻不承担责任：
　（1）受到计算机病毒、木马或其他恶意程序、黑客攻击的破坏；
　（2）您或 {0} 的设备、系统、软件、硬件和通信线路出现故障；
　（3）您的不当操作；
　（4）您通过非 {0} 授权的方式使用本服务；
　（5）其他 {0} 无法控制或合理预见的情形。
10.3 您理解并同意，在使用本服务的过程中，可能会遇到网络信息或第三方行为带来的风险， {0} 不对任何来源于第三方的信息的真实性、适用性、合法性承担责任，也不对因他人侵权行为给您造成的损害负责。这些风险包括但不限于：
　（1）来自他人匿名或冒名的含有威胁、诽谤、令人反感或非法内容的信息；
　（2）因使用本协议项下的服务，遭受他人误导、欺骗或其他导致或可能导致的任何心理、生理上的伤害以及经济上的损失；
　（3）其他因网络信息或第三方行为引起的风险。
10.4 {0} 依据本协议约定获得处理违法违规内容的权利，该权利不构成 {0} 的义务或承诺， {0} 不能保证及时发现违法行为或进行相应处理。
10.5 在任何情况下，您不应轻信借款、索要身份信息或其他涉及财产的网络信息。涉及财产操作的，请一定先核实对方身份，并请经常留意 {0} 有关防范诈骗犯罪的提示。
10.6 您理解并同意，为了保障遵守国家法律法规、维护公序良俗，保护他人合法权益， {0} 仅在能力范围内根据相关投诉或通知尽最大的努力对用户发布的内容进行判断，但并不保证 {0} 判断完全与司法机关、行政机关的判断相一致，由此产生的后果您已经理解并同意自行承担。
十一、管辖与适用法律
11.1 本协议的成立、生效、履行、解释及纠纷解决，适用中华人民共和国大陆地区法律（不包括冲突法）。
11.2 本协议签订地为中华人民共和国河北省唐山市。
11.3 若您和 {0} 之间发生任何纠纷或争议，首先应友好协商解决；协商不成的，您同意将纠纷或争议提交本协议签订地有管辖权的人民法院管辖。
十二、其他
12.1 您使用 {0} 的服务即视为您已阅读本协议并接受本协议的约束。
12.2 我方有权在必要时修改本协议条款。您可以在相关服务页面查阅最新版本的协议条款。
12.3 本协议条款变更后，如果您继续使用 {0} 提供的软件或服务，即视为您已接受修改后的协议。如果您不接受修改后的协议，应当停止使用 {0} 提供的软件或服务。
12.4 本协议所有条款的标题仅为阅读方便，本身并无实际涵义，不能作为本协议涵义解释的依据。
12.5 本协议条款无论因何种原因部分无效或不可执行，其余条款仍有效，对双方具有约束力。
12.6 如果您对本协议或本服务有意见或建议，可与我们的用户服务部门联系，我们会给予您必要的帮助。
您可联系2659365465@qq.com获取帮助。"
editable = false
wrap_mode = 1

[node name="TextEdit2" type="TextEdit" parent="DetailsPanel/MarginContainer"]
visible = false
layout_mode = 2
text = "感谢您信任并选择我们的游戏《{0}》

我们非常重视您的个人信息和隐私保护，为了保障您的个人权益，在您进入游戏前，请务必审核阅读隐私政策内的所有条款，尤其是：

1、为了为您推荐您可能感兴趣的内容/商业广告信息，可能需要您开启地理位置权限，您有权拒绝授权。

2、我们可能会申请存储权限，用于存放广告下载的应用、读取图片/视频用于分享。

3、我们可能会申请电话权限，以保障软件服务的安全运营及效率、完成广告和信息的推送和统计。请您放心，我们不会通过该权限获取您的电话号码、通话内容，也不会在您不知情的情况下拨打电话。

您勾选“阅读并且同意隐私条款”的行为即表示您已阅读完毕并同意《隐私政策》的全部内容。

隐私协议 细则

1.我们收集和使用的个人信息

在您使用本游戏产品服务的过程中，我们会按照如下方式收集您在使用服务时主动提供的或因为使用服务而产生的信息，用以向您提供、优化我们的服务以及保障您的账号安全：

1.1 当您登录并使用本游戏产品服务时，我们会收集您的Android ID作为身份标识信息，用于标记您为《{0}》的用户，并以此身份标识来记录您在游戏内使用过的CDK兑换码，防止重复使用，保证游戏正常运营。

1.2 为满足相关法律法规政策及相关主管部门的要求，您应提供真实身份信息进行实名认证，我们将通过TDS实名认证和防沉迷服务系统验证您的真实身份信息。若您未完成实名认证，则我们无法为您提供服务。您所提供的身份信息在加密后仅用于与公安权威数据平台数据源进行比对，我们不会对其留存。

1.3 游戏接入了第三方广告SDK，同时为保障您正常使用我们的服务，维护游戏基础功能的正常运行，根据您的设备终端和网络状态优化本游戏产品性能，提升您的游戏体验并保障您的账号安全，我们会收集您的设备名称、设备类型、设备型号和版本、操作系统、系统属性、IP地址、运行中的进程、软件安装列表、通讯录、短信、运营商信息、Wi-Fi状态/参数，设备识别符（包括IMEI、IMSI、MAC 地址、Android ID、硬件序列号）、应用ID、使用GPS获取定位、使用网络获取定位信息。

1.4 为保障您的游戏环境和设备安全，营造公平、健康及安全的游戏环境，我们会收集您的设备和游戏识别信息，例如设备标识符、硬件及操作系统信息、已安装应用列表、进程及游戏崩溃记录、游戏总体使用情况、游戏渠道来源信息，以用于打击破坏游戏公平环境或干扰、破坏游戏服务正常进行的行为（如用于检测盗版、扫描外挂、防止作弊）。

1.5 为收集上述信息以实现相应的游戏功能和业务场景，我们可能在具体业务场景下向您申请部分系统权限，您可以自主选择是否授权。这些系统权限包括：

• Android-存储：提供图片保存、存档保存功能。

• Android-位置/ iOS-定位服务：提供基于定位功能的游戏服务。

拒绝上述权限仅会影响与之关联的特定游戏功能和业务场景，不会影响您使用游戏其他游戏功能。请您理解，由于不同终端设备操作系统的原因，在不同终端上的权限名称会有所区别。您可以通过终端设备【设置】页面进行系统权限的管理。

2. 个人信息的存储

2.1 信息存储的方式和期限

我们会通过安全的方式存储您的信息，包括本地存储（例如利用APP进行数据缓存）、数据库和服务器日志。一般情况下，我们只会在为实现服务目的所必需的时间内或法律法规规定的条件下存储您的个人信息。前述期限届满后，我们将对您的个人信息做删除或匿名化处理。我们判断个人信息的储存期限主要参考以下标准并以其中较长者为准：

• 完成您同意使用的业务功能；

• 保证我们为您提供服务的安全和质量；

• 您同意的更长的留存期间；

• 是否存在保留期限的其他规定；

• 法律法规规定需要在特定期限内保存的信息。

2.2 产品或服务停止运营时的通知

当我们的产品或服务发生停止运营的情况时，我们将根据相关法律法规规定进行公告通知，并依法保障您的合法权益。

3. 信息安全

3.1 安全保护措施

我们努力为用户的信息安全提供保障，以防止信息的泄露、丢失、不当使用、未经授权访问和披露。我们使用多方位的安全保护措施，以确保用户的个人信息保护处于合理的安全水平，包括技术保护手段、管理制度控制、安全体系保障诸多方面。

我们采用业界领先的技术保护措施。我们使用的技术手段包括但不限于防火墙、加密（例如SSL）、去标识化或匿名化处理、访问控制措施。此外，我们还会不断加强安装在您设备端的软件的安全能力。例如，我们会在您的设备本地完成部分信息加密工作，以巩固安全传输；我们会了解您设备安装的应用信息和运行的进程信息，以预防病毒和木马恶意程序。

我们建立了保障个人信息安全专门的管理制度、流程和组织。例如，我们严格限制访问信息的人员范围，要求他们遵守保密义务并进行审计，违反义务的人员会根据规定进行处罚。我们也会审查该管理制度、流程和组织，以防未经授权的人员擅自访问、使用或披露用户的信息。

我们建议您在使用产品和服务时充分注意对个人信息的保护，我们也会提供多种安全功能来协助您保护自己的个人信息安全。

3.2 安全事件处置措施

若发生个人信息泄露安全事件，我们会启动应急预案，阻止安全事件扩大。安全事件发生后，我们会以公告、推送通知或邮件形式告知您安全事件的基本情况、我们即将或已经采取的处置措施和补救措施，以及我们对您的应对建议。如果难以实现逐一告知，我们将通过公告方式发布警示。

4. 您的权利

在您使用本游戏产品服务期间，我们可能会视游戏产品具体情况为您提供相应的操作设置，以便您可以查询、复制、更正、补充、删除或撤回您的相关个人信息。此外，我们还设置了投诉举报渠道，您的意见将会得到及时的处理。

4.1 个人信息收集和使用规则查询

您可以在本产品内的设置界面随时查看产品个人信息收集和使用规则，包括但不限于本指引、以及产品敏感权限使用规则和授权情况。

请您知悉和了解，本指引中所述服务和对应个人信息收集和使用情况，可能因为您选择使用的具体服务，以及您使用的设备型号、系统版本因素存在差异。

4.2 个人信息收集和使用授权变更

您可以通过删除信息、关闭或开启特定产品功能、关闭或开启特定产品获取的设备权限（具体权限因用户使用的设备型号、系统版本不同而存在差异），变更对我们收集和使用您的个人信息的授权范围。

撤回授权后，您可能无法使用该授权对应产品功能，但不影响其他功能的使用。您撤回授权不影响撤回前基于您的授权已经进行的个人信息处理活动的效力。

部分个人信息收集和使用对应我们服务的基础功能，如您希望撤回相关个人信息收集和使用的授权可能导致我们无法为您提供服务，在此情形下，如您仍希望撤回相关授权，您可以通过申请账号注销实现该需求。例如，基于法律法规要求，使用游戏服务必须进行实名认证，如您希望撤回对我们收集实名认证信息的授权，要求我们删除您的实名认证信息，我们可能无法继续为您提供游戏产品基本服务。

5. 未成年人保护

我们高度重视未成年人个人信息保护，并持续探索更好的未成年人个人信息保护方式。

若您是未成年人的法定监护人，请您关注您所监护的未成年人是否是在取得您的授权同意之后使用《{0}》的服务或提供其个人信息。如果您对您所监护的未成年人的个人信息有疑问，请通过卸载游戏的方式删除实名认证信息。

我们会积极按照国家防沉迷政策要求，通过启用防沉迷系统保护未成年人的合法权益。另外，我们会收集您的登录时间、游戏时长信息，通过从系统层面自动干预和限制未成年人游戏时间、启用强制下线功能方式，引导未成年人合理游戏，并在疑似未成年人消费后尝试联系其监护人进行提醒、确认与处理，帮助未成年人健康上网。
"
editable = false
wrap_mode = 1

[connection signal="pressed" from="HBoxContainer/Label2/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Label4/TextureButton" to="." method="_on_texture_button2_pressed"]
[connection signal="toggled" from="CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="pressed" from="DetailsPanel/TextureButton" to="." method="_on_texture_button3_pressed"]
